--- a/css/custom.css
+++ b/css/custom.css
@@ -4,13 +4,19 @@ body {
 
 .container {
   margin-top: 34px; }
+  .container .bottom-shadow {
+    -webkit-box-shadow: 0px 13px 25px -5px rgba(92, 79, 92, 0.5);
+    -moz-box-shadow: 0px 13px 25px -5px #5c4f5c;
+    box-shadow: 0px 13px 25px -5px #5c4f5c; }
+  .container .footer {
+    background-color: #222;
+    border-color: #080808;
+    color: #9d9d9d; }
   .container .card {
     background-color: rgba(146, 65, 78, 0.44);
     padding: 15px;
     color: white; }
-
-.container-2 {
-  display: flex;
-  justify-content: center; }
+    .container .card img {
+      width: 350px; }
 
 /*# sourceMappingURL=custom.css.map */
