--- a/css/custom.scss
+++ b/css/custom.scss
@@ -6,14 +6,25 @@ body{
 .container{
 	margin-top:34px;
 
+	.bottom-shadow{
+		-webkit-box-shadow: 0px 13px 25px -5px rgba(92,79,92,.50);
+		-moz-box-shadow: 0px 13px 25px -5px rgba(92,79,92,50);
+		box-shadow: 0px 13px 25px -5px rgba(92,79,92,50);
+	}
+
+	.footer{
+		background-color: #222;
+		border-color: #080808;
+		color:#9d9d9d;
+	}
+
 	.card{
 		background-color: rgba(146, 65, 78, 0.44);
 		padding:15px;
 		color:white;
-	}
-}
 
-.container-2 {
-	display:flex;
-	justify-content: center;
+		img{
+			width:350px;
+		}
+	}
 }
