--- a/css/custom.css
+++ b/css/custom.css
@@ -20,7 +20,8 @@ body {
 .container-fluid .footer {
   background-color: #222;
   border-color: #080808;
-  color: #9d9d9d; }
+  color: #9d9d9d;
+  margin-top: 30px; }
 .container-fluid .footer-bottom {
   position: absolute;
   bottom: 0;
@@ -28,5 +29,8 @@ body {
 
 form {
   color: white; }
+
+.navbar-brand img {
+  margin-top: -5px; }
 
 /*# sourceMappingURL=custom.css.map */
