--- a/css/custom.scss
+++ b/css/custom.scss
@@ -1,52 +1,78 @@
-body{
-	background-image: url("../images/stormbg.jpg");
-	background-size:cover;
-	margin:0;
-	padding:0;
-}
-
-.container{
-	margin-top:34px;
-
-	.bottom-shadow{
-		-webkit-box-shadow: 0px 13px 25px -5px rgba(92,79,92,.50);
-		-moz-box-shadow: 0px 13px 25px -5px rgba(92,79,92,50);
-		box-shadow: 0px 13px 25px -5px rgba(92,79,92,50);
+	body{
+		background-image: url("../images/stormbg.jpg");
+		background-size:cover;
+		margin:0;
+		padding:0;
 	}
 
-	.card{
-		background-color: rgba(146, 65, 78, 0.44);
-		padding:15px;
-		color:white;
+	.container{
+		margin-top:34px;
 
-		img{
-			width:350px;
+		.bottom-shadow{
+			-webkit-box-shadow: 0px 13px 25px -5px rgba(92,79,92,.50);
+			-moz-box-shadow: 0px 13px 25px -5px rgba(92,79,92,50);
+			box-shadow: 0px 13px 25px -5px rgba(92,79,92,50);
+		}
+
+		.card{
+			background-color: rgba(146, 65, 78, 0.44);
+			padding:15px;
+			color:white;
+
+			img{
+				width:350px;
+			}
 		}
 	}
-}
 
-.container-fluid {
-	.footer{
-		background-color: #222;
-		border-color: #080808;
-		color:#9d9d9d;
-		margin-top:30px;
+	.container-fluid {
+		.footer{
+			background-color: #222;
+			border-color: #080808;
+			color:#9d9d9d;
+			margin-top:30px;
+		}
+
+		.footer-bottom{
+			position:absolute;
+			bottom:0;
+			width:100%;
+		}
+		.social {
+			display: flex;
+			justify-content: center;
+
+			a {
+				text-decoration: none;
+			}
+
+			i {
+				margin: 10px;
+			}
+		}
 	}
 
-	.footer-bottom{
-		position:absolute;
-		bottom:0;
-		width:100%;
-
+	.container-2 {
+		display: flex;
+		justify-content: center;
 	}
-}
 
-form{
-	color:white;
-}
-
-.navbar-brand{
-	img{
-		margin-top:-5px;
+	form{
+		color:white;
 	}
-}
+
+	.navbar-brand{
+		img{
+			margin-top:-5px;
+		}
+	}
+
+	.shadow{
+		-webkit-box-shadow: 0px 0px 10px 2.5px rgba(0,0,0,0.75);
+		-moz-box-shadow: 0px 0px 10px 2.5px rgba(0,0,0,0.75);
+		box-shadow: 0px 0px 10px 2.5px rgba(0,0,0,0.75);
+	}
+
+
+
+
