--- a/css/custom.scss
+++ b/css/custom.scss
@@ -20,7 +20,7 @@
 			color:white;
 
 			img{
-				width:350px;
+				width:100%;
 			}
 		}
 	}
@@ -74,5 +74,47 @@
 	}
 
 
+.logo{
+	margin:50px;
+	background-color: rgba(146, 65, 78, 0.44);
+	padding:45px;
+	color:white;
 
+}
+
+//pins
+
+	.columns {
+		column-count: 5;
+		column-gap: 10px;
+		column-fill:auto;
+		padding-top: 60px;
+	}
+
+
+	div {
+		display:block;
+	}
+
+	div.pin {
+		display:inline-block;
+		border:2px solid #a1a1a1;
+		box-shadow: 0px 3px rgba(34, 25, 25, 0.4);
+		margin:0px 2px 15px 0px;
+		-webkit-column-break-inside: avoid;
+		break-inside: avoid;
+		padding: 15px 15px 5px 15px;
+		background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
+		opacity: 1;
+		border-radius: 5px;
+	}
+
+	.pin img {
+		width:100%;
+		border-radius: 3px;
+		border-bottom: 5px;
+		margin-bottom: 15px;
+	}
+
+	
 
