--- a/css/custom.css
+++ b/css/custom.css
@@ -44,6 +44,10 @@ form {
 .navbar-brand img {
   margin-top: -5px; }
 
+.line {
+  border-bottom: 1px solid white;
+  margin: 10px 0 30px 0; }
+
 .shadow {
   -webkit-box-shadow: 0px 0px 10px 2.5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 10px 2.5px rgba(0, 0, 0, 0.75);
