--- a/css/custom.scss
+++ b/css/custom.scss
@@ -52,6 +52,8 @@
 		}
 	}
 
+
+
 	.container-2 {
 		display: flex;
 		justify-content: center;
@@ -67,6 +69,11 @@
 		}
 	}
 
+	.line{
+		border-bottom: 1px solid rgb(255, 255, 255);
+		margin:10px 0 30px 0;
+	}
+
 	.shadow{
 		-webkit-box-shadow: 0px 0px 10px 2.5px rgba(0,0,0,0.75);
 		-moz-box-shadow: 0px 0px 10px 2.5px rgba(0,0,0,0.75);
@@ -79,7 +86,6 @@
 	background-color: rgba(146, 65, 78, 0.44);
 	padding:45px;
 	color:white;
-
 }
 
 //pins
